--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,17 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+    <!-- 头部 -->
+    <view class="header-layout">        
+        <image src="../../images/icon_my_selected.png" class="icon-my header-icon"></image>
+        <image src="../../images/icon_statistics_selected.png" class="icon-statistics header-icon"></image>
+        <view class="avatars-layout">
+
+        </view>
+        <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4"  class="avatars-account"></image>
+    </view>
+
+    <!-- 简单统计 -->
+    <view class="statistics-layout">
+
+    </view>
 </view>
