--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,7 @@
 /**app.wxss**/
 .container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
+    height: 100%;   
+    box-sizing: border-box;
+    height: 100vh;
+    background-color: #fafafa;
 } 
