--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,2 +1,72 @@
 <!--pages/my/my.wxml-->
-<text>pages/my/my.wxml</text>
+<view class="container">
+    <view class="header">
+        <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4" class="user_avatar"></image>
+        <text class="user_name">Something</text>
+    </view>
+    <view class="statistic-layout">
+        <view class="statistic-pannel">
+            <text class="statistic-title">连续记账</text>
+            <text class="statistic-num">8</text><text>天</text>
+        </view>
+        <view class="statistic-pannel middle-pannel">
+            <text class="statistic-title">累计记账</text>
+            <text class="statistic-num">8</text><text>天</text>
+        </view>
+        <view class="statistic-pannel">
+            <text class="statistic-title">累计记账</text>
+            <text class="statistic-num">8</text><text>天</text>
+        </view>
+    </view>
+
+    <view class="weui-cells weui-cells_after-title" style="margin-top: 15px;">
+        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <view class="weui-cell__hd">
+                <image src="../../images/icon_books.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+            </view>
+            <view class="weui-cell__bd">我的账本</view>
+            <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+        </navigator>
+    </view>
+    <view class="weui-cells weui-cells_after-title" style="margin-top: 15px;">
+        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <view class="weui-cell__hd">
+                <image src="../../images/icon_wallet.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+            </view>
+            <view class="weui-cell__bd">收支途径管理</view>
+            <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+        </navigator>
+        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <view class="weui-cell__hd">
+                <image src="../../images/icon_input.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+            </view>
+            <view class="weui-cell__bd">支出条目管理</view>
+            <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+        </navigator>
+        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <view class="weui-cell__hd">
+                <image src="../../images/icon_output.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+            </view>
+            <view class="weui-cell__bd">收入条目管理</view>
+            <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+        </navigator>
+    </view>
+
+    <view class="weui-cells weui-cells_after-title" style="margin-top: 15px;">
+        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <view class="weui-cell__hd">
+                <image src="../../images/icon_share.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+            </view>
+            <view class="weui-cell__bd">邀请好友</view>
+            <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+        </navigator>
+        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <view class="weui-cell__hd">
+                <image src="../../images/icon_question.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+            </view>
+            <view class="weui-cell__bd">意见反馈</view>
+            <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+        </navigator>
+    </view>
+
+</view>    
