--- a/pages/book_setting/book_setting.wxml
+++ b/pages/book_setting/book_setting.wxml
@@ -7,7 +7,7 @@
         <image src="https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=3468481793,3455309356&fm=27&gp=0.jpg" class="user_avatar" ></image>
         <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4" class="user_avatar" ></image>
         <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4" class="user_avatar" ></image>    
-        <image src="../../images/icon_add_person.png" class="user_avatar" style=""></image>    
+        <image src="../../images/icon_add_person.png" class="user_avatar" ></image>    
         <image src="../../images/icon_delete_person.png" class="user_avatar" ></image>    
     </view>
 
@@ -30,7 +30,7 @@
         </navigator>
         <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
             <view class="weui-cell__bd">设为默认账本</view>
-            <switch class="weui-cell__ft "/>
+            <switch class="weui-cell__ft weui-cell__ft_in-access"/>
         </navigator>
     </view>
 </view>    
