--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,14 +2,19 @@
 <view class="container">
     <!-- 头部 -->
     <view class="header-layout">        
-        <image src="../../images/icon_my.png" class="icon-my header-icon"></image>
+        <navigator url="/pages/my/my"  >
+            <image src="../../images/icon_my.png" class="icon-my header-icon"></image>
+        </navigator>    
         <image src="../../images/icon_statistics.png" class="icon-statistics header-icon"></image>
         <image src="../../images/icon_calendar.png" class="icon-statistics header-icon"></image>
-        <view class="avatars-layout">
-            <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4"  class="avatars-account" style="z-index: 999;"></image>
-            <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4"  class="avatars-account" style="margin-left: -12px; z-index: 998;"></image>
-        </view>
-        <image src="../../images/icon_calendar.png" class="icon-setting header-icon"></image>
+        <navigator url="/pages/book_setting/book_setting" >
+            <view class="avatars-layout">
+                <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4"  class="avatars-account" style="z-index: 999;"></image>
+                <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4"  class="avatars-account" style="margin-left: -12px; z-index: 998;"></image>
+            </view>
+        </navigator>
+        
+        <image src="../../images/icon_calendar.png" class="icon-setting header-icon"></image>       
     </view>
 
     <!-- 简单统计 -->
