--- a/pages/book_setting/book_setting.wxml
+++ b/pages/book_setting/book_setting.wxml
@@ -1,6 +1,5 @@
 <!--pages/book_setting/book_setting.wxml-->
-<view class="container">
-
+<view class="container">    
     <view class="header-layout">
         <image src="https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=3468481793,3455309356&fm=27&gp=0.jpg" class="user_avatar" ></image>
         <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4" class="user_avatar" ></image>
@@ -13,10 +12,10 @@
     </view>
 
     <view class="weui-cells weui-cells_after-title" style="margin-top: 15px;">
-        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell" bindtap="editName">
             <view class="weui-cell__bd">账本名字</view>
             <view class="weui-cell__ft weui-cell__ft_in-access">Something</view>
-        </navigator>
+        </view>
         <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
             <view class="weui-cell__bd">成员管理</view>
             <view class="weui-cell__ft weui-cell__ft_in-access">2人</view>
@@ -33,5 +32,13 @@
             <view class="weui-cell__bd">设为默认账本</view>
             <switch class="weui-cell__ft weui-cell__ft_in-access"/>
         </navigator>
+    </view>
+
+    <view class="dialog-container" wx:if="{{editName}}">
+        <view class="dialog">
+            <text class="dialog-title">账本名字</text>        
+            <input placeholder="Something" auto-focus class="edit_input"/>  
+            <button class="weui-btn" type="primary" bindtap="changeName">完成</button>     
+        </view>
     </view>
 </view>    
