--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -138,3 +138,29 @@
     position: absolute;
     bottom: 40px;
 }
+
+
+/* 授权框 */
+.authorize-dialog {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    outline: 0;
+    -webkit-overflow-scrolling: touch;
+    background-color: rgb(0, 0, 0);  
+    filter: alpha(opacity=60);  
+    background-color: rgba(0, 0, 0, 0.6); 
+    z-index: 9999;
+    padding: 20px;
+    padding-top: 50%;
+}
+
+.authorize-info {
+    color: #FFF;
+    font-size: 16px;
+    margin-bottom: 10px;
+    display: block;
+}
