--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,5 @@
 <!--index.wxml-->
+<wxs module="filters" src="../../utils/filters.wxs"></wxs>
 <view class="container">
     <!-- 头部 -->
     <view class="header-layout">        
@@ -8,9 +9,8 @@
         <image src="../../images/icon_statistics.png" class="icon-statistics header-icon"></image>
         <image src="../../images/icon_calendar.png" class="icon-statistics header-icon"></image>
         <navigator url="/pages/book_setting/book_setting" >
-            <view class="avatars-layout">
-                <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4"  class="avatars-account" style="z-index: 999;"></image>
-                <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4"  class="avatars-account" style="margin-left: -12px; z-index: 998;"></image>
+            <view class="avatars-layout" wx:for="{{avatars}}">
+                <image src="{{item}}"  class="avatars-account" style="margin-left: {{ index > 0 ? '-12px' : ''}}"></image>
             </view>
         </navigator>
         
@@ -21,15 +21,19 @@
     <view class="statistics-layout">
         <view class="statistics-pannel">
             <text class="statistics-title">本月支出</text>
+            <text class="statistics-money">{{filters.toFix(accountInfo.expenditureAmount)}}</text>
+        </view>
+        <view class="statistics-pannel" wx:if="{{accountInfo.budgetaryAmount != null}}">
+            <text class="statistics-title">预算剩余</text>
             <text class="statistics-money">998</text>
         </view>
-        <view class="statistics-pannel">
-            <text class="statistics-title">本月支出</text>
-            <text class="statistics-money">998</text>
+        <view class="statistics-pannel" bindtap="setBudgetary" wx:else>
+            <text class="statistics-title">没有预算</text>
+            <text class="statistics-money set-budgetaryAmount">设置预算</text>
         </view>
         <view class="statistics-pannel">
-            <text class="statistics-title">本月支出</text>
-            <text class="statistics-money">998</text>
+            <text class="statistics-title">本月收出</text>
+            <text class="statistics-money">{{filters.toFix(accountInfo.incomeAmount)}}</text>
         </view>
     </view>
 
